--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <link href="css/simple-lightbox.css" rel="stylesheet" type="text/css" />
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
 
